Add entry point

--- a/ruby_gem/docker-compose.yml
+++ b/ruby_gem/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
   app:
     build: .
+    entrypoint: ./bin/wait_for_pg.sh db
     ports:
       - "8080:8080"
     volumes:
